Scala3/scala3-22307/java-error.txt
/root/autodl-tmp/tmp/00408e03ca498453/00408e2159d31ad4/YV46lD.java:3: error: YV46lD is not abstract and does not override abstract method leO(Object) in McpQy
public final class YV46lD extends A7lh5Sak  {
             ^
1 error
